<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.CurrentFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_current"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp">

            <TextView
                android:id="@+id/current_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="28sp"
                android:textStyle="italic"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Name" />

            <HorizontalScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/current_name">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image_current1"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        tools:src="@tools:sample/avatars"
                        android:contentDescription="@string/image1" />

                    <ImageView
                        android:id="@+id/image_current2"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="8dp"
                        tools:src="@tools:sample/avatars"
                        android:contentDescription="@string/image2" />

                    <ImageView
                        android:id="@+id/image_current3"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="8dp"
                        tools:src="@tools:sample/avatars"
                        android:contentDescription="@string/image3" />

                    <ImageView
                        android:id="@+id/image_current4"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="8dp"
                        tools:src="@tools:sample/avatars"
                        android:contentDescription="@string/image4" />

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/current_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/scroll"
                tools:text="ID" />

            <TextView
                android:id="@+id/current_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/current_id"
                tools:text="Weight" />

            <TextView
                android:id="@+id/current_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/current_weight"
                tools:text="Height" />

            <TextView
                android:id="@+id/current_exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/current_height"
                tools:text="Base experience" />

            <TextView
                android:id="@+id/current_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/current_exp"
                tools:text="Default" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/back"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_current"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="button_back, card_current" />

    <ProgressBar
        android:id="@+id/progress_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_error_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_retry_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/retry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_error_current" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_error_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="text_error_current, button_retry_current" />

</androidx.constraintlayout.widget.ConstraintLayout>